--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@id/search"
+        android:singleLine="true"
+        android:imeOptions="actionSearch"
         android:layout_toLeftOf="@+id/search" />
 
     <ListView
