--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,8 +32,9 @@
             android:layout_height="wrap_content"
             android:visibility="gone"/>
 
-        <ListView
+        <android.support.v7.widget.RecyclerView
             android:id="@+id/list"
+            android:scrollbars="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
     </LinearLayout>
